--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
+    "react-fast-marquee": "^1.2.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.3.0",
     "react-router-hash-link": "^2.4.3",
